// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FluentSideNav render nav bar 1`] = `
<div
  id="sideNavContainer"
>
  <DetailsViewLeftNav
    isSideNavOpen={false}
    narrowModeStatus={
      {
        "isHeaderAndNavCollapsed": false,
      }
    }
    selectedPivot={0}
    setNavComponentRef={[Function]}
    setSideNavOpen={null}
    tabStoreData={
      {
        "isClosed": false,
      }
    }
  />
</div>
`;

exports[`FluentSideNav render null if tab is closed 1`] = `null`;

exports[`FluentSideNav render side nav 1`] = `
<GenericPanel
  className="leftNavPanel"
  hasCloseButton={false}
  isLightDismiss={true}
  isOpen={false}
  onDismiss={[Function]}
  onRenderHeader={[Function]}
  onRenderNavigation={[Function]}
  onRenderNavigationContent={[Function]}
  type={8}
>
  <DetailsViewLeftNav
    isSideNavOpen={false}
    narrowModeStatus={
      {
        "isHeaderAndNavCollapsed": true,
      }
    }
    selectedPivot={0}
    setNavComponentRef={[Function]}
    setSideNavOpen={null}
    tabStoreData={
      {
        "isClosed": false,
      }
    }
  />
</GenericPanel>
`;
